<resources>
    <string name="app_name">iRM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="isempty">Thiếu thông tin</string>
    <string name="registed">Đăng ký thành công</string>
    <string name="cannot_create">Lỗi đăng ký, vui lòng thử lại</string>
    <string name="error">Lỗi</string>
    <string name="wrong_password">Mật khẩu không chính xác</string>
    <string name="wrong_phone">Số điện thoại chưa đăng ký</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="toast_error">Đã xảy ra lỗi. Vui lòng thử lại!</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="change_res">Đổi thông tin cửa hàng</string>
    <string name="edit">Thay đổi</string>
    <string name="delete">Xóa</string>
    <string name="choose_device">Chọn thiết bị</string>
    <string name="other_devices">Thiết bị khác</string>
    <string name="btn_scan">Tìm thiết bị xung quanh</string>
    <string name="scanning">Đang tìm thiết bị</string>
    <string name="none_paired">Chưa kết nối</string>
    <string name="select_device">Chọn thiết bị</string>
    <string name="none_found">Không tìm thấy thiết bị</string>
    <string name="title_paired_devices">Thiết bị phù hợp</string>

    <!-- Bluetooth -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="title_devices">Devices</string>
    <string name="scan">Scan</string>

    <!-- Đăng ký -->
    <string name="register">Đăng Ký Tài Khoản</string>
    <string name="name">Họ và tên</string>
    <string name="email">Email đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="cpassword">Xác nhận mật khẩu</string>
    <string name="switch_res">Đăng ký cửa hàng mới</string>
    <string name="resname">Tên cửa hàng</string>
    <string name="resemail">Email cửa hàng</string>
    <string name="resphone">Số điện thoại cửa hàng</string>
    <string name="resaddress">Đại chỉ cửa hàng</string>
    <string name="btnregister">Đăng Ký</string>
    <string name="btninput">Nhập Email</string>
    <string name="btnQR">Mã QR</string>
    <string name="btnQRscanner">Quét Mã QR</string>
    <string name="btnconfirm">Xác Nhận</string>
    <string name="btnsave">Lưu</string>
    <!-- Đăng ký -->
    <string name="login">Đăng Nhập</string>
    <string name="forgot">Quên mật khẩu</string>
    <!-- Main -->
    <string name="newres">Đăng ký cửa hàng mới</string>
    <string name="joinres">Xin vào cửa hàng</string>
    <string name="dacoloi">Đã xảy ra lỗi, Vui lòng thử lại</string>
    <string name="deleted">Đã xóa thành công</string>
    <string name="addcategory">Thêm danh mục</string>
    <string name="addfood">Thêm món ăn (uống)</string>
    <string name="foodname">Tên món ăn (uống)</string>
    <string name="foodprice">Đơn giá</string>
    <string name="category">Danh mục</string>
    <string name="discountgroup">Giảm giá các món trong danh mục</string>
    <string name="discount">Giảm giá:</string>
    <!-- Drawer -->
    <string name="acount">Tài khoản</string>
    <string name="menu">Thực đơn</string>
    <string name="people">Nhân sự</string>
    <string name="revenue">Doanh thu</string>
    <string name="history">Lịch sử</string>
    <string name="quit">Thôi việc</string>
    <string name="setting">Cài đặt</string>
    <string name="tutorial">Hướng dẫn</string>
    <string name="logout">Đăng xuất</string>
    <!-- Finger -->
    <string name="fingerSettting">Chạm vào cảm biến để thêm vân tay</string>
    <string name="fingerLogin">Chạm vào cảm biến để đăng nhập</string>
    <string name ="thankyou">Cảm ơn và hẹn gặp lại quý khách</string>

</resources>
