<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/mau_trang">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_menu">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/mau_den"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:id="@+id/tv_groupmenu"/>
        <Button
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:background="@mipmap/ic_x"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/btn_close"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discountgroup"
        android:layout_below="@id/layout_menu"
        android:padding="4dp"
        android:id="@+id/discount"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_discount"
        android:layout_below="@id/discount">
        <TextView
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:layout_above="@id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:padding="4dp"
            android:id="@+id/giam"
            android:textSize="18sp"
            android:textColor="@color/mau_den"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/edt_discount"
            android:layout_toEndOf="@id/giam"
            android:textSize="18sp"
            android:hint="0"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:inputType="number"/>
        <TextView
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:layout_above="@id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/edt_discount"
            android:text="%"
            android:padding="4dp"
            android:textSize="18sp"
            android:textColor="@color/mau_den"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary"
            android:text="@string/btnsave"
            android:textSize="18sp"
            android:layout_below="@id/edt_discount"
            android:layout_marginBottom="8dp"/>
    </RelativeLayout>
</RelativeLayout>