<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background"
    android:padding="8dp"
    tools:context=".JoinActivity">
    <Button
        android:id="@+id/btn_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@mipmap/ic_x"
        android:layout_alignParentRight="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/button"
        android:gravity="center">
        <Button
            android:gravity="bottom|center_horizontal"
            android:background="@null"
            android:enabled="false"
            android:id="@+id/btn_input"
            android:text="@string/btninput"
            android:textColor="@color/mau_trang"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"/>
        <Button
            android:gravity="bottom|center_horizontal"
            android:background="@null"
            android:id="@+id/btn_qr"
            android:text="@string/btnQRscanner"
            android:textColor="@color/mau_trang"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="8dp"
        android:id="@+id/layout_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Địa chỉ Email" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm"
            android:layout_below="@id/email"
            android:text="@string/btnconfirm"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:id="@+id/layout_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button">
        <SurfaceView
            android:layout_centerHorizontal="true"
            android:id="@+id/barcode_scanner"
            android:name="info.androidhive.barcode.BarcodeReader"
            android:layout_width="200dp"
            android:layout_height="200dp" />
        <info.androidhive.barcode.ScannerOverlay
            android:id="@+id/sc_overlay"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="#44000000"
            app:line_color="#7323DC"
            app:line_speed="6"
            app:line_width="4"
            app:square_height="200"
            app:square_width="200"/>
        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_preview"
            android:text="Hướng máy ảnh vào mã QR của cửa hàng"
            android:textColor="@color/mau_den"
            android:layout_below="@id/barcode_scanner"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>